--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="Mar 1, 2022 12:00:00 AM UTC"
+          data-date=""
         >
           <li class="clock-item">
             <span class="count-number days">20</span>
