--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       <div class="owner-status"></div>
       <div class="countdown">
         <ul
-          id="countdown"
+          id="countdowns"
           class="count-down"
-          data-date=""
+          data-date="Mar 1, 2022 12:00:00 AM UTC"
         >
           <li class="clock-item">
             <span class="count-number days">20</span>
@@ -101,7 +101,7 @@
       <br>
       <div>  
         <a href="" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Minintg soon</span>
+          ><span>Coming soon</span>
         </a>
         </div>
       </div>
