--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="images/x-icon/site.webmanifest">
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body id="conimg">
     <script>
       function increment() {
           document.getElementById('demoInput').stepUp();
