--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <br>
       <div>  
         <a href="" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Coming soon</span>
+          ><span>Mint</span>
         </a>
         </div>
       </div>
