--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         </div>
         <div class="menu">
           <a
-            href="https://"
+            href="https://instagram.com/awacnft"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/instagram.png" width="25" height="25"  alt="Instagram" />
           </a>
           <a
-            href="https://twitter.com/CodeCats10k"
+            href="https://twitter.com/awacnft"
             target="_blank"
             rel="noopener noreferrer"
           >
