--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ font-size: inherit;
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6>Keeping our focus on the community again by creating a virtual gallery in the metaverse and a physical gallery for all Artist in the community to spread their work out there all over the world.</h6>
+                            <h6>Keeping our focus on the community by creating a virtual gallery in the metaverse and a physical gallery for all Artist in the community to spread their work out there all over the world.</h6>
                           </div>
                         </div>
                       </div>
