--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Feb 18 2022 20:42:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Feb 19 2022 19:56:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="620bfd77564ba828ceb748e5" data-wf-site="620bfd77564ba8a03db748dd">
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/awac-30603b.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -112,7 +112,7 @@ font-size: inherit;
 }
 </style>
     </div>
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="cecbe119-dda2-0e4d-52e7-2e8f117a6968" data-easing="ease" data-easing2="ease" role="banner" class="navbar_component w-nav"><img src="images/android-chrome-512x512.png" loading="lazy" width="84" sizes="83.99305725097656px" srcset="images/android-chrome-512x512-p-500.png 500w, images/android-chrome-512x512.png 512w" alt="" class="image-2">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="cecbe119-dda2-0e4d-52e7-2e8f117a6968" data-easing="ease" data-easing2="ease" role="banner" class="navbar_component w-nav"><img src="images/android-chrome-512x512.png" loading="lazy" width="84" sizes="84px" srcset="images/android-chrome-512x512-p-500.png 500w, images/android-chrome-512x512.png 512w" alt="" class="image-2">
       <a href="https://opensea.io/collection/awac" class="link-block-5 dw os w-inline-block"></a>
       <a href="https://instagram.com/awacnft" class="link-block-5 dw ig w-inline-block"></a>
       <a href="https://twitter.com/awacnft" class="link-block-5 dw w-inline-block"></a>
@@ -213,6 +213,17 @@ font-size: inherit;
                         <p class="text-size-medium text-color-grey">AWAC is a collection of 5,555 skeleton Apes chilling in the ETH blockchain, our plan is to build together as a community to reach our goals and succeed as one family as NFT Artist and collectors.</p>
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+              <div class="home-header_component bg">
+                <div class="text-align-center">
+                  <div class="max-width-large">
+                    <div class="margin-bottom margin-medium">
+                      <div class="max-width-small align-center">
+                        <p class="text-size-medium text-color-grey ten">hhhhhhhhhh<br></p>
+                      </div>
+                    </div>
                     <div class="button-wrapper button-wrapper-center">
                       <a href="#" target="_blank" class="button w-button">Mint</a>
                     </div>
@@ -252,7 +263,7 @@ font-size: inherit;
               <div class="w-layout-grid home-howto_component">
                 <div class="home-howto_content-left">
                   <div class="margin-top margin-small">
-                    <h3>Roadmap</h3>
+                    <h3 class="heading-13">Roadmap</h3>
                   </div>
                 </div>
                 <div class="howto_content-right">
@@ -262,48 +273,110 @@ font-size: inherit;
                     </div>
                     <div data-w-id="32d1df33-6389-b5db-ec6e-66c1b82341d6" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-_32d1df33-6389-b5db-ec6e-66c1b82341d7-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.98958587646484px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6>Keeping our focus on the community by creating a virtual gallery in the metaverse and a physical gallery for all Artist in the community to spread their work out there all over the world.</h6>
+                            <h6 class="heading-9">Keeping our focus on the community by creating a virtual gallery in the metaverse and a physical gallery for all Artist in the community to spread their work out there all over the world.</h6>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div data-w-id="32d1df33-6389-b5db-ec6e-66c1b82341e1" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-_32d1df33-6389-b5db-ec6e-66c1b82341e2-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.98958587646484px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6>Collaborating with a 2D Artist to create a companion collection which will be FREE mint for our holders.</h6>
+                            <h6 class="heading-10">Collaborating with a 2D Artist to create a companion collection which will be FREE mint for our holders.</h6>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div data-w-id="94b5911f-e5d6-a565-37af-7288988a1af9" class="w-layout-grid home-howto_timeline-step">
                       <div class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.98958587646484px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6>Collaborating with a 3D Artist to create a collection for the 1/1 unique holders.</h6>
+                            <h6 class="heading-11">Collaborating with a 3D Artist to create a collection for the 1/1 unique holders.</h6>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div data-w-id="a17ea536-1ed7-a3cb-a380-d0670854992b" class="w-layout-grid home-howto_timeline-step">
                       <div class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.98958587646484px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6>Game App is a must (TBD).</h6>
+                            <h6 class="heading-12">Game App is a must (TBD).</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="w-layout-grid home-howto_component">
+                <div class="home-howto_content-left">
+                  <div class="margin-top margin-small">
+                    <h3 class="heading-6">Team</h3>
+                  </div>
+                </div>
+                <div class="howto_content-right">
+                  <div data-w-id="ea8d3004-b55f-8628-8d7f-3d065e0ccd45" class="home-howto_timeline-wrapper">
+                    <div class="home-howto_progress-bar-wrapper">
+                      <div class="home-howto_progress-bar"></div>
+                    </div>
+                    <div data-w-id="ea8d3004-b55f-8628-8d7f-3d065e0ccd48" class="w-layout-grid home-howto_timeline-step">
+                      <div id="w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd49-ceb748e5" class="home-howto_timeline-left">
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/thumbnail_Untitled74_20220216200926.png" loading="lazy" width="150" height="150" srcset="images/thumbnail_Untitled74_20220216200926.png 500w, images/thumbnail_Untitled74_20220216200926.png 800w, images/thumbnail_Untitled74_20220216200926.png 1080w, images/thumbnail_Untitled74_20220216200926.png 1280w" sizes="96px" alt="" class="icon-1x1-medium"></div>
+                      </div>
+                      <div class="home-howto_timeline-right">
+                        <div class="home-howto_text-wrapper">
+                          <div class="margin-bottom margin-xsmall">
+                            <h6 class="heading-7"><strong class="bold-text-4">Gando.eth</strong><br>Creative Director / Artist </h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div data-w-id="ea8d3004-b55f-8628-8d7f-3d065e0ccd51" class="w-layout-grid home-howto_timeline-step">
+                      <div id="w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd52-ceb748e5" class="home-howto_timeline-left">
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/1402.png" loading="lazy" sizes="96px" srcset="images/1402.png 500w, images/1402.png 1080w, images/1402.png 1600w, images/1402.png 2000w, images/1402.png 2500w" alt="" class="icon-1x1-medium"></div>
+                      </div>
+                      <div class="home-howto_timeline-right">
+                        <div class="home-howto_text-wrapper">
+                          <div class="margin-bottom margin-xsmall">
+                            <h6 class="heading-8"><strong class="bold-text-2">Sal_eh</strong> <br>Full Stack Developer / Generative artist </h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div data-w-id="eb66a4b9-f952-680e-39e8-1dadc0004452" class="w-layout-grid home-howto_timeline-step">
+                      <div id="w-node-eb66a4b9-f952-680e-39e8-1dadc0004453-ceb748e5" class="home-howto_timeline-left">
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/23.png" loading="lazy" sizes="96px" srcset="images/23.png 500w, images/23.png 1600w, images/23.png 2000w, images/23.png 2500w" alt="" class="icon-1x1-medium"></div>
+                      </div>
+                      <div class="home-howto_timeline-right">
+                        <div class="home-howto_text-wrapper">
+                          <div class="margin-bottom margin-xsmall">
+                            <h6 class="ws"><strong class="bold-text">WasseM</strong> <br>Artist </h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div data-w-id="85d02215-4670-8914-939e-a37e6d1249b5" class="w-layout-grid home-howto_timeline-step">
+                      <div id="w-node-_85d02215-4670-8914-939e-a37e6d1249b6-ceb748e5" class="home-howto_timeline-left">
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/4572.png" loading="lazy" sizes="96px" srcset="images/4572.png 500w, images/4572.png 800w, images/4572.png 1080w, images/4572.png 1600w, images/4572.png 2000w, images/4572.png 2500w" alt="" class="icon-1x1-medium"></div>
+                      </div>
+                      <div class="home-howto_timeline-right">
+                        <div class="home-howto_text-wrapper">
+                          <div class="margin-bottom margin-xsmall">
+                            <h6 class="ws"><strong class="bold-text-3">Ahmed Mohsen</strong><br>Video Creator / Audio &amp; Visual Artist </h6>
                           </div>
                         </div>
                       </div>
@@ -320,10 +393,9 @@ font-size: inherit;
       <div class="page-padding">
         <div class="container-large">
           <div class="padding-vertical padding-xxlarge">
-            <div class="line-divider"></div>
-            <div class="padding-top padding-medium">
-              <div class="w-layout-grid footer_bottom-wrapper">
-                <div id="w-node-e1dfd3b5-39a9-e48c-dac8-9c89c9a849f3-ceb748e5" class="footer_credit-text">© 2022 AWAC. All right reserved.</div>
+            <div class="line-divider">
+              <div class="wf-section">
+                <div class="footer_credit-text">© 2022 AWAC. All right reserved.</div>
               </div>
             </div>
           </div>
