--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Feb 19 2022 19:56:41 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Feb 21 2022 06:26:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="620bfd77564ba828ceb748e5" data-wf-site="620bfd77564ba8a03db748dd">
 <head>
   <meta charset="utf-8">
@@ -250,10 +250,6 @@ font-size: inherit;
             <div id="w-node-fb36ae1f-5de5-1418-eeb9-4f9cfadbd542-ceb748e5" class="punks-slider_image-wrapper"><img src="images/152.png" loading="lazy" sizes="160px" srcset="images/152-p-500.png 500w, images/152-p-800.png 800w, images/152-p-1080.png 1080w, images/152-p-1600.png 1600w, images/152-p-2000.png 2000w, images/152.png 2500w" alt="" class="punks-slider_image"></div>
             <div id="w-node-_7c26bdce-d3fb-a95c-fc14-2af5261498c4-ceb748e5" class="punks-slider_image-wrapper"><img src="images/360.png" loading="lazy" sizes="160px" srcset="images/360-p-500.png 500w, images/360-p-800.png 800w, images/360-p-1080.png 1080w, images/360-p-1600.png 1600w, images/360-p-2000.png 2000w, images/360.png 2500w" alt="" class="punks-slider_image"></div>
           </div>
-          <div class="punks-slider_list">
-            <div id="w-node-f5d40f60-120f-910e-e57c-39d5cd055ad6-ceb748e5" class="punks-slider_image-wrapper"><img src="images/427.png" loading="lazy" sizes="160px" srcset="images/427-p-500.png 500w, images/427-p-800.png 800w, images/427-p-1080.png 1080w, images/427-p-1600.png 1600w, images/427-p-2000.png 2000w, images/427.png 2500w" alt="" class="punks-slider_image"></div>
-            <div id="w-node-f5d40f60-120f-910e-e57c-39d5cd055ad8-ceb748e5" class="punks-slider_image-wrapper"><img src="images/581.png" loading="lazy" sizes="160px" srcset="images/581-p-500.png 500w, images/581-p-800.png 800w, images/581-p-1080.png 1080w, images/581-p-1600.png 1600w, images/581-p-2000.png 2000w, images/581.png 2500w" alt="" class="punks-slider_image"></div>
-          </div>
         </div>
       </div>
       <section class="section-home-howto">
@@ -335,7 +331,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="ea8d3004-b55f-8628-8d7f-3d065e0ccd48" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd49-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/thumbnail_Untitled74_20220216200926.png" loading="lazy" width="150" height="150" srcset="images/thumbnail_Untitled74_20220216200926.png 500w, images/thumbnail_Untitled74_20220216200926.png 800w, images/thumbnail_Untitled74_20220216200926.png 1080w, images/thumbnail_Untitled74_20220216200926.png 1280w" sizes="96px" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/new.png" loading="lazy" width="150" height="150" srcset="images/new.png 500w, images/new.png 800w, images/new.png 1080w, images/new.png 1600w, images/new.png 2000w, images/new.png 2500w" sizes="96px" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -347,7 +343,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="ea8d3004-b55f-8628-8d7f-3d065e0ccd51" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd52-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/1402.png" loading="lazy" sizes="96px" srcset="images/1402.png 500w, images/1402.png 1080w, images/1402.png 1600w, images/1402.png 2000w, images/1402.png 2500w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/1402.png" loading="lazy" sizes="96px" srcset="images/1402-p-500.png 500w, images/1402-p-1080.png 1080w, images/1402-p-1600.png 1600w, images/1402-p-2000.png 2000w, images/1402.png 2500w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -359,7 +355,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="eb66a4b9-f952-680e-39e8-1dadc0004452" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-eb66a4b9-f952-680e-39e8-1dadc0004453-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/23.png" loading="lazy" sizes="96px" srcset="images/23.png 500w, images/23.png 1600w, images/23.png 2000w, images/23.png 2500w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/23.png" loading="lazy" sizes="96px" srcset="images/23-p-500.png 500w, images/23-p-1600.png 1600w, images/23-p-2000.png 2000w, images/23.png 2500w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -371,7 +367,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="85d02215-4670-8914-939e-a37e6d1249b5" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-_85d02215-4670-8914-939e-a37e6d1249b6-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/4572.png" loading="lazy" sizes="96px" srcset="images/4572.png 500w, images/4572.png 800w, images/4572.png 1080w, images/4572.png 1600w, images/4572.png 2000w, images/4572.png 2500w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/4572.png" loading="lazy" sizes="96px" srcset="images/4572-p-500.png 500w, images/4572-p-800.png 800w, images/4572-p-1080.png 1080w, images/4572-p-1600.png 1600w, images/4572-p-2000.png 2000w, images/4572.png 2500w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
