--- a/index.html
+++ b/index.html
@@ -353,18 +353,7 @@ font-size: inherit;
                         </div>
                       </div>
                     </div>
-                    <div data-w-id="eb66a4b9-f952-680e-39e8-1dadc0004452" class="w-layout-grid home-howto_timeline-step">
-                      <div id="w-node-eb66a4b9-f952-680e-39e8-1dadc0004453-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/23.png" loading="lazy" sizes="96px" srcset="images/23-p-500.png 500w, images/23-p-1600.png 1600w, images/23-p-2000.png 2000w, images/23.png 2500w" alt="" class="icon-1x1-medium"></div>
-                      </div>
-                      <div class="home-howto_timeline-right">
-                        <div class="home-howto_text-wrapper">
-                          <div class="margin-bottom margin-xsmall">
-                            <h6 class="ws"><strong class="bold-text">WasseM</strong> <br>Artist </h6>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                   
                     <div data-w-id="85d02215-4670-8914-939e-a37e6d1249b5" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-_85d02215-4670-8914-939e-a37e6d1249b6-ceb748e5" class="home-howto_timeline-left">
                         <div class="home-howto_timeline-icon-wrapper"><img src="images/4572.png" loading="lazy" sizes="96px" srcset="images/4572-p-500.png 500w, images/4572-p-800.png 800w, images/4572-p-1080.png 1080w, images/4572-p-1600.png 1600w, images/4572-p-2000.png 2000w, images/4572.png 2500w" alt="" class="icon-1x1-medium"></div>
@@ -372,7 +361,7 @@ font-size: inherit;
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6 class="ws"><strong class="bold-text-3">Ahmed Mohsen</strong><br>Video Creator / Audio &amp; Visual Artist </h6>
+                            <h6 class="ws"><strong class="bold-text-3">Ahmed</strong><br>Video Creator / Audio &amp; Visual Artist </h6>
                           </div>
                         </div>
                       </div>
