--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Feb 21 2022 06:26:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Feb 27 2022 16:44:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="620bfd77564ba828ceb748e5" data-wf-site="620bfd77564ba8a03db748dd">
 <head>
   <meta charset="utf-8">
@@ -112,9 +112,10 @@ font-size: inherit;
 }
 </style>
     </div>
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="cecbe119-dda2-0e4d-52e7-2e8f117a6968" data-easing="ease" data-easing2="ease" role="banner" class="navbar_component w-nav"><img src="images/android-chrome-512x512.png" loading="lazy" width="84" sizes="84px" srcset="images/android-chrome-512x512-p-500.png 500w, images/android-chrome-512x512.png 512w" alt="" class="image-2">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="cecbe119-dda2-0e4d-52e7-2e8f117a6968" data-easing="ease" data-easing2="ease" role="banner" class="navbar_component w-nav"><img src="images/android-chrome-512x512.png" loading="lazy" width="84" sizes="83.984375px" srcset="images/android-chrome-512x512-p-500.png 500w, images/android-chrome-512x512.png 512w" alt="" class="image-2">
       <a href="https://opensea.io/collection/awac" class="link-block-5 dw os w-inline-block"></a>
       <a href="https://instagram.com/awacnft" class="link-block-5 dw ig w-inline-block"></a>
+      <a href="https://discord.gg/jCDKjFeZSW" target="_blank" class="link-block-5 dw d w-inline-block"></a>
       <a href="https://twitter.com/awacnft" class="link-block-5 dw w-inline-block"></a>
     </div>
     <div class="global-styles w-embed">
@@ -269,7 +270,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="32d1df33-6389-b5db-ec6e-66c1b82341d6" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-_32d1df33-6389-b5db-ec6e-66c1b82341d7-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.99609375px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -281,7 +282,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="32d1df33-6389-b5db-ec6e-66c1b82341e1" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-_32d1df33-6389-b5db-ec6e-66c1b82341e2-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.99609375px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -293,7 +294,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="94b5911f-e5d6-a565-37af-7288988a1af9" class="w-layout-grid home-howto_timeline-step">
                       <div class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.99609375px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -305,7 +306,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="a17ea536-1ed7-a3cb-a380-d0670854992b" class="w-layout-grid home-howto_timeline-step">
                       <div class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="96px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/jar.png" loading="lazy" sizes="95.99609375px" srcset="images/jar-p-500.png 500w, images/jar-p-800.png 800w, images/jar-p-1080.png 1080w, images/jar.png 1280w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -331,7 +332,7 @@ font-size: inherit;
                     </div>
                     <div data-w-id="ea8d3004-b55f-8628-8d7f-3d065e0ccd48" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd49-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/new.png" loading="lazy" width="150" height="150" srcset="images/new.png 500w, images/new.png 800w, images/new.png 1080w, images/new.png 1600w, images/new.png 2000w, images/new.png 2500w" sizes="96px" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/Untitled74_20220227191129.png" loading="lazy" width="150" height="150" srcset="images/Untitled74_20220227191129.png 500w, images/Untitled74_20220227191129.png 800w, images/Untitled74_20220227191129.png 1080w, images/Untitled74_20220227191129.png 1600w, images/Untitled74_20220227191129.png 2000w, images/Untitled74_20220227191129.png 2500w" sizes="95.99609375px" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
@@ -343,25 +344,48 @@ font-size: inherit;
                     </div>
                     <div data-w-id="ea8d3004-b55f-8628-8d7f-3d065e0ccd51" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd52-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/1402.png" loading="lazy" sizes="96px" srcset="images/1402-p-500.png 500w, images/1402-p-1080.png 1080w, images/1402-p-1600.png 1600w, images/1402-p-2000.png 2000w, images/1402.png 2500w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/bana.png" loading="lazy" sizes="95.99609375px" srcset="images/bana-p-500.png 500w, images/bana-p-800.png 800w, images/bana-p-1080.png 1080w, images/bana-p-1600.png 1600w, images/bana-p-2000.png 2000w, images/bana.png 2500w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6 class="heading-8"><strong class="bold-text-2">Sal_eh</strong> <br>Full Stack Developer / Generative artist </h6>
+                            <h6 class="heading-8">Banah<strong class="bold-text-2"><br>Graphic Designers, Content Creative.</strong></h6>
                           </div>
                         </div>
                       </div>
                     </div>
-                   
+                    <div data-w-id="eb66a4b9-f952-680e-39e8-1dadc0004452" class="w-layout-grid home-howto_timeline-step">
+                      <div id="w-node-eb66a4b9-f952-680e-39e8-1dadc0004453-ceb748e5" class="home-howto_timeline-left">
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/Screen-Shot-2022-02-27-at-7.09.58-PM.png" loading="lazy" sizes="95.99609375px" srcset="images/Screen-Shot-2022-02-27-at-7.09.58-PM-p-500.png 500w, images/Screen-Shot-2022-02-27-at-7.09.58-PM.png 671w" alt="" class="icon-1x1-medium"></div>
+                      </div>
+                      <div class="home-howto_timeline-right">
+                        <div class="home-howto_text-wrapper">
+                          <div class="margin-bottom margin-xsmall">
+                            <h6 class="ws"><strong class="bold-text-5">Sal_eh</strong><br>Full Stack Developer / Generative artist</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                     <div data-w-id="85d02215-4670-8914-939e-a37e6d1249b5" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-_85d02215-4670-8914-939e-a37e6d1249b6-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/4572.png" loading="lazy" sizes="96px" srcset="images/4572-p-500.png 500w, images/4572-p-800.png 800w, images/4572-p-1080.png 1080w, images/4572-p-1600.png 1600w, images/4572-p-2000.png 2000w, images/4572.png 2500w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/4572.png" loading="lazy" sizes="95.99609375px" srcset="images/4572-p-500.png 500w, images/4572-p-800.png 800w, images/4572-p-1080.png 1080w, images/4572-p-1600.png 1600w, images/4572-p-2000.png 2000w, images/4572.png 2500w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
                             <h6 class="ws"><strong class="bold-text-3">Ahmed</strong><br>Video Creator / Audio &amp; Visual Artist </h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div data-w-id="a1e3cece-a8df-ca20-3147-1421ecfd0ecd" class="w-layout-grid home-howto_timeline-step">
+                      <div id="w-node-a1e3cece-a8df-ca20-3147-1421ecfd0ece-ceb748e5" class="home-howto_timeline-left">
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/6.png" loading="lazy" sizes="95.99609375px" srcset="images/6.png 500w, images/6.png 800w, images/6.png 1080w, images/6.png 1600w, images/6.png 2000w, images/6.png 2500w" alt="" class="icon-1x1-medium"></div>
+                      </div>
+                      <div class="home-howto_timeline-right">
+                        <div class="home-howto_text-wrapper">
+                          <div class="margin-bottom margin-xsmall">
+                            <h6 class="ws"><strong class="bold-text-3">Pat</strong><br>Social Activities </h6>
                           </div>
                         </div>
                       </div>
