--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Feb 27 2022 16:44:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Feb 27 2022 16:54:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="620bfd77564ba828ceb748e5" data-wf-site="620bfd77564ba8a03db748dd">
 <head>
   <meta charset="utf-8">
@@ -380,12 +380,12 @@ font-size: inherit;
                     </div>
                     <div data-w-id="a1e3cece-a8df-ca20-3147-1421ecfd0ecd" class="w-layout-grid home-howto_timeline-step">
                       <div id="w-node-a1e3cece-a8df-ca20-3147-1421ecfd0ece-ceb748e5" class="home-howto_timeline-left">
-                        <div class="home-howto_timeline-icon-wrapper"><img src="images/6.png" loading="lazy" sizes="95.99609375px" srcset="images/6.png 500w, images/6.png 800w, images/6.png 1080w, images/6.png 1600w, images/6.png 2000w, images/6.png 2500w" alt="" class="icon-1x1-medium"></div>
+                        <div class="home-howto_timeline-icon-wrapper"><img src="images/4875.PNG" loading="lazy" sizes="95.99609375px" srcset="images/4875.PNG 500w, images/4875.PNG 800w, images/4875.PNG 1080w, images/4875.PNG 1600w, images/4875.PNG 2000w, images/4875.PNG 2500w" alt="" class="icon-1x1-medium"></div>
                       </div>
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6 class="ws"><strong class="bold-text-3">Pat</strong><br>Social Activities </h6>
+                            <h6 class="ws"><strong class="bold-text-3">Pat</strong><br>Social Activist </h6>
                           </div>
                         </div>
                       </div>
