--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ font-size: inherit;
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6 class="heading-8">Banah<strong class="bold-text-2"><br>Graphic Designers, Content Creative.</strong></h6>
+                            <h6 class="heading-8">Banah<strong class="bold-text-2"><br>Graphic Designers, Content Creator.</strong></h6>
                           </div>
                         </div>
                       </div>
