--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ font-size: inherit;
                       <div class="home-howto_timeline-right">
                         <div class="home-howto_text-wrapper">
                           <div class="margin-bottom margin-xsmall">
-                            <h6 class="heading-11">Collaborating with a 3D Artist to create a collection for the 1/1 unique holders.</h6>
+                            <h6 class="heading-11">Collaborating with a 3D Artist to create a collection for unique holders.</h6>
                           </div>
                         </div>
                       </div>
